add quiz with question and basic styles

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
   --goal-color: brown;
   --floor-color: lightgrey;
   --wall-color: #a7dbd8;
+  /* quiz vars */
+  --hue-neutral: 200;
+  --hue-wrong: 0;
+  --hue-correct: 145;
 }
 
 * {
@@ -17,6 +21,7 @@ body {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   transition: 0.2s ease;
   text-align: center;
+  position: relative;
 }
 
 /* when body have success class add green background */
@@ -97,4 +102,73 @@ div.layer div {
 body.success #success-msg {
   opacity: 1;
   transition: opacity 0.2 ease;
+}
+
+body.correct {
+  --hue: var(--hue-correct);
+}
+
+body.wrong {
+  --hue: var(--hue-wrong);
+}
+
+/* Quiz style */
+.container {
+  width: 800px;
+  max-width: 80%;
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 0 10px 2px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.btn-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.btn {
+  --hue: var(--hue-neutral);
+  border: 1px solid hsl(var(--hue), 100%, 30%);
+  background-color: hsl(var(--hue), 100%, 50%);
+  border-radius: 5px;
+  padding: 5px 10px;
+  /* color: white; */
+  outline: none;
+}
+
+.btn:hover {
+  border-color: black;
+}
+
+.btn.correct {
+  --hue: var(--hue-correct);
+  color: black;
+}
+
+.btn.wrong {
+  --hue: var(--hue-wrong);
+}
+
+.start-btn, .next-btn {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px 20px;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hide {
+  display: none;
 }
