--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
   --player-color: red;
   --goal-color: brown;
   --floor-color: lightgrey;
-  --wall-color: #a7dbd8;
+  --wall-color: #2a3468;
+  --tiles-color: #B2B2B2;
   /* quiz vars */
   --hue-neutral: 200;
   --hue-wrong: 0;
@@ -64,7 +65,7 @@ div.layer div {
 }
 
 #tiles div {
-  border: 1px solid grey;
+  border: 1px solid var(--tiles-color);
 }
 
 .default .floor {
@@ -127,12 +128,13 @@ body.wrong {
   background-color: white;
   border-radius: 5px;
   padding: 10px;
-  box-shadow: 0 0 10px 2px;
+  /* box-shadow: 0 0 10px 2px; */
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
   visibility: hidden;
 }
 
@@ -148,26 +150,27 @@ body.wrong {
 }
 
 .btn {
-  --hue: var(--hue-neutral);
-  border: 1px solid hsl(var(--hue), 100%, 30%);
-  background-color: hsl(var(--hue), 100%, 50%);
+  /* --hue: var(--hue-neutral); */
+  border: 1px solid #01befe;
+  background-color: #01befe;
   border-radius: 5px;
   padding: 5px 10px;
-  /* color: white; */
+  color: #EFF5F5;
   outline: none;
 }
 
 .btn:hover {
-  border-color: black;
+  border-color:var(--wall-color);
 }
 
 .btn.correct {
-  --hue: var(--hue-correct);
-  color: black;
+  background-color: #4caf50;
+  /* color: black; */
 }
 
 .btn.wrong {
-  --hue: var(--hue-wrong);
+  background-color: #ef5350;
+
 }
 
 .start-btn,
@@ -184,7 +187,7 @@ body.wrong {
 }
 
 .hide {
-  display: none;
+  visibility: none;
 }
 
 .show {
