add animation for quiz and add multiple goals for maze

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,10 @@
   --wall-color: #262622;
   --tiles-color: #b2b2b2;
   /* quiz vars */
-  --hue-neutral: 200;
-  --hue-wrong: 0;
-  --hue-correct: 145;
+  --button-background: #262622;
+  --button-border: #a3818a;
+  --button-wrong: #f15844;
+  --button-success: #4caf50;
 }
 
 * {
@@ -86,7 +87,7 @@ div.layer div {
 }
 
 .player,
-.goal {
+.goals {
   transform-origin: center;
   transform: scale(0.85);
   border-left: 26px solid transparent;
@@ -97,7 +98,7 @@ div.layer div {
   border-bottom: 52px solid var(--player-color);
 }
 
-.goal {
+.goals {
   border-top: 52px solid var(--goal-color);
 }
 
